--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,6 +2,8 @@ name: Build and sign iOS
 on: 
   push: 
     branches: [ pre-main ]
+  workflow_dispatch:
+
 jobs:
   build-ios: 
     name: Build Flutter iOS
