--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,7 +2,7 @@ name: Build and sign iOS
 on: 
   push: 
     branches: [ pre-main ]
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   build-ios: 
