--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -42,8 +42,8 @@ jobs:
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
         with: 
-          app-path: "https://github.com/givtnl/givt-app-kids/releases/tag/$env:latest_tag" 
+          app-path: "https://github.com/givtnl/givt-app-kids/releases/download/1.0.0/Runner.ipa" 
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
-    
+# We should get latest tag and interpolate the app-path
