--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -31,19 +31,19 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORECONNECT_PRIVATE_KEY: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
           GITHUB_API_TOKEN: ${{ secrets.PERSONAL_ACCESS_KEY }}
-  upload-ios: 
-    name: Build Flutter iOS
-    needs: build-ios
-    runs-on: macos-latest
-    steps:
-      - name: 'Get latest tag'
-        run: |
-          echo "latest_tag=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_ENV
-      - name: 'Upload app to TestFlight'
-        uses: apple-actions/upload-testflight-build@v1
-        with: 
-          app-path: "https://github.com/givtnl/givt-app-kids/releases/download/1.0.0/Runner.ipa" 
-          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-          api-private-key: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
+  # upload-ios: 
+  #   name: Build Flutter iOS
+  #   needs: build-ios
+  #   runs-on: macos-latest
+  #   steps:
+  #     - name: 'Get latest tag'
+  #       run: |
+  #         echo "latest_tag=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_ENV
+  #     - name: 'Upload app to TestFlight'
+  #       uses: apple-actions/upload-testflight-build@v1
+  #       with: 
+  #         app-path: "https://github.com/givtnl/givt-app-kids/releases/download/1.0.0/Runner.ipa" 
+  #         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+  #         api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+  #         api-private-key: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
 # We should get latest tag and interpolate the app-path
