--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4
+version: 1.0.5
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   streaming_shared_preferences: ^2.0.0
   provider: ^6.0.4
+  flutter_svg: ^1.1.6
+  package_info_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/xmas.jpeg
-    - assets/images/shelter.jpeg
+    - assets/images/xmas.jpg
+    - assets/images/shelter.jpg
     - assets/images/superman.png
+    - assets/images/child.svg
+    - assets/images/dog.svg
+    - assets/images/avatar.svg
+    - assets/images/givy_celebrates.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
