--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.6
+version: 1.0.7
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.4
   flutter_svg: ^1.1.6
   package_info_plus: ^3.0.2
+  mobile_scanner: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,8 @@ flutter:
     - assets/images/dog.svg
     - assets/images/avatar.svg
     - assets/images/givy_celebrates.png
+    - assets/images/reconstruction.jpg
+    - assets/images/church.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
