--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^1.1.6
   package_info_plus: ^3.0.2
   mobile_scanner: ^2.1.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
