adding mixpanel test event tracking to the app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.givtapp.kids">
+
+   <uses-permission android:name="android.permission.INTERNET"/>    
+   
    <application
         android:label="Givt Kids"
         android:name="${applicationName}"
