--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   intl: ^0.18.0
   lottie: ^2.1.0
   shared_preferences: ^2.0.15
-  mixpanel_flutter: ^2.0.0
+  mixpanel_flutter: 1.6.0
 
 dev_dependencies:
   flutter_test:
