--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.12
+version: 1.0.13
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -43,7 +43,8 @@ dependencies:
   intl: ^0.18.0
   lottie: ^2.1.0
   shared_preferences: ^2.0.15
-  mixpanel_flutter: 1.6.0
+  firebase_core: ^2.4.1
+  firebase_analytics: ^10.1.0
 
 dev_dependencies:
   flutter_test:
