The currency text input formatter added to the Choose Amount (calculator view) screen added; Also few bugs with roundings are fixed. version changed to 1.0.15

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.14
+version: 1.0.15
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_core: ^2.4.1
   firebase_analytics: ^10.1.0
+  currency_text_input_formatter: ^2.1.8  
 
 dev_dependencies:
   flutter_test:
@@ -130,3 +131,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+dependency_overrides:
+  intl: ^0.18.0
