--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.15
+version: 1.0.16
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_analytics: ^10.1.0
   currency_text_input_formatter: ^2.1.8  
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
