--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.16
+version: 1.0.17
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -98,6 +98,8 @@ flutter:
     - assets/images/target_right_top.svg
     - assets/images/target_right_bottom.svg
     - assets/lotties/confetti.json
+    - assets/images/password_show.svg
+    - assets/images/password_hide.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
