Profile selection feature is implemented; Transactions are stored on server; Version changed to 1.0.18

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.17
+version: 1.0.18
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -100,6 +100,10 @@ flutter:
     - assets/lotties/confetti.json
     - assets/images/password_show.svg
     - assets/images/password_hide.svg
+    - assets/images/monster1.svg
+    - assets/images/monster2.svg
+    - assets/images/monster3.svg
+    - assets/images/monster4.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
