--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="net.givtapp.kids">
 
    <uses-permission android:name="android.permission.INTERNET"/>    
-   
+   <uses-permission android:name="android.permission.VIBRATE"/>
+
    <application
         android:label="Givt Kids"
         android:name="${applicationName}"
