--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.8
   amplitude_flutter: ^3.13.0
   http: ^0.13.5
+  vibration: ^1.7.6
 
 dev_dependencies:
   flutter_test:
