--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
    <uses-permission android:name="android.permission.VIBRATE"/>
 
    <application
-        android:label="Givt Kids"
-        android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:label="${appName}"
+        android:icon="@mipmap/launcher_icon"
+        android:roundIcon="@mipmap/ic_launcher_round">
         <activity
             android:name=".MainActivity"
             android:exported="true"
