--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,7 +1,7 @@
 name: Build and sign iOS
 on: 
   push: 
-    branches: [ pre-main ]
+    branches: [ main,pre-main ]
 jobs:
   build-ios: 
     name: Build Flutter iOS
