--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.2
+  json_serializable: ^6.5.4
 
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"  
