--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,7 @@
 	<string>We need your camera to scan a QR code</string>
 	<key>DART_DEFINES</key>
 	<string>$(DART_DEFINES)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
