--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,7 +1,10 @@
 name: Build and sign iOS
 on: 
-  push: 
-    branches: [ main,pre-main ]
+  workflow_call:
+    secrets:
+      placeholder:
+        required: true
+
 jobs:
   build-ios: 
     name: Build Flutter iOS
