--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,14 +19,14 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "Running on the main branch, deploying to production."
-            echo "export package_name=net.givtapp.kids" >> $GITHUB_ENV
-            echo "export flavor=production" >> $GITHUB_ENV
-            echo "export track=production" >> $GITHUB_ENV
+            echo "PACKAGE_NAME=net.givtapp.kids" >> $GITHUB_ENV
+            echo "FLAVOR=production" >> $GITHUB_ENV
+            echo "TRACK=production" >> $GITHUB_ENV
           else
             echo "Running on a different branch, deploying to test."
-            echo "export package_name=net.givtapp.kids.test" >> $GITHUB_ENV
-            echo "export flavor=development" >> $GITHUB_ENV
-            echo "export track=internal" >> $GITHUB_ENV
+            echo "PACKAGE_NAME=net.givtapp.kids.test" >> $GITHUB_ENV
+            echo "FLAVOR=development" >> $GITHUB_ENV
+            echo "TRACK=internal" >> $GITHUB_ENV
           fi
 
       - name: Checkout
@@ -54,5 +54,8 @@ jobs:
           lane: android build_and_deploy
           subdirectory: android
         env:
-          GOOGLE_PLAY_JSON_KEY_DATA: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
+          GOOGLE_PLAY_JSON_KEY: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
+          FLAVOR: ${{ env.FLAVOR }}
+          TRACK: ${{ env.TRACK }}
