branching logic from pipeline into main

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,7 +2,13 @@ name: Build and sign iOS
 on: 
   workflow_call:
     secrets:
-      placeholder:
+      MATCH_PASSWORD:
+        required: true
+      APPSTORECONNECT_PRIVATE_KEY:
+        required: true
+      GITHUB_API_TOKEN:
+        required: true
+      CODESIGNING_DEPLOY_KEY:
         required: true
 
 jobs:
@@ -10,21 +16,39 @@ jobs:
     name: Build Flutter iOS
     runs-on: macos-latest
     steps:
+      - name: Set environment variables
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "Running on the main branch, deploying to production."
+            echo "PACKAGE_NAME=net.givtapp.kids" >> $GITHUB_ENV
+            echo "FLAVOR=production" >> $GITHUB_ENV
+            echo "TRACK=production" >> $GITHUB_ENV
+          else
+            echo "Running on a different branch, deploying to test."
+            echo "PACKAGE_NAME=net.givtapp.kids.test" >> $GITHUB_ENV
+            echo "FLAVOR=development" >> $GITHUB_ENV
+            echo "TRACK=internal" >> $GITHUB_ENV
+          fi
+
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.118.0
         with: 
           ruby-version: '3.0'
           bundler-cache: true
+
       - name: Auth codesigning
         uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.CODESIGNING_DEPLOY_KEY }}
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+
       - name: Run Fastlane
         uses: maierj/fastlane-action@v2.3.0
         with:
@@ -33,20 +57,6 @@ jobs:
         env: 
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORECONNECT_PRIVATE_KEY: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
-          GITHUB_API_TOKEN: ${{ secrets.PERSONAL_ACCESS_KEY }}
-  # upload-ios: 
-  #   name: Build Flutter iOS
-  #   needs: build-ios
-  #   runs-on: macos-latest
-  #   steps:
-  #     - name: 'Get latest tag'
-  #       run: |
-  #         echo "latest_tag=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_ENV
-  #     - name: 'Upload app to TestFlight'
-  #       uses: apple-actions/upload-testflight-build@v1
-  #       with: 
-  #         app-path: "https://github.com/givtnl/givt-app-kids/releases/download/1.0.0/Runner.ipa" 
-  #         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-  #         api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-  #         api-private-key: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
-# We should get latest tag and interpolate the app-path
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
+          PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
+          FLAVOR: ${{ env.FLAVOR }}
