--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^2.0.5
   hydrated_bloc: ^9.1.1
   flutter_bloc: ^8.1.3
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
