--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   hydrated_bloc: ^9.1.1
   flutter_bloc: ^8.1.3
   path_provider: ^2.0.15
+  countup: ^0.1.4
 
 dev_dependencies:
   flutter_test:
