--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   path_provider: ^2.0.15
   countup: ^0.1.4
+  get_it: ^7.6.0
+
 
 dev_dependencies:
   flutter_test:
