--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   countup: ^0.1.4
   http_interceptor: ^1.0.2
   get_it: ^7.6.0
+  go_router: ^10.1.2
+  nfc_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lotties/
+    - assets/icon/
 
   fonts:
     - family: Raleway
