nfc_manager added and configured for both platforms; able to read text from nfc tag

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   countup: ^0.1.4
   http_interceptor: ^1.0.2
   get_it: ^7.6.0
+  nfc_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
