KIDS 1264 Implement initial recommendation design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   http_interceptor: ^1.0.2
   get_it: ^7.6.0
   go_router: ^10.1.2
-  nfc_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +53,11 @@ flutter:
     - family: Raleway
       fonts:
         - asset: assets/fonts/Raleway-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Raleway-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Raleway-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Raleway-Bold.ttf
           weight: 700
 
