The Xcode is configured to enable deep links for ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,21 @@
 	<string>$(DART_DEFINES)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>FlutterDeepLinkingEnabled</key>
+	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+    <dict>
+    <key>CFBundleTypeRole</key>
+    <string>Editor</string>
+    <key>CFBundleURLName</key>
+    <string>net.givtapp.kids</string>
+    <key>CFBundleURLSchemes</key>
+    <array>
+    <string>appscheme</string>
+    </array>
+    </dict>
+</array>
+
 </dict>
 </plist>
