--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,9 +61,10 @@
     <key>CFBundleTypeRole</key>
     <string>Editor</string>
     <key>CFBundleURLName</key>
-    <string>net.givtapp.kids</string>
+    <string>givt.app</string>
     <key>CFBundleURLSchemes</key>
     <array>
+	<string>https</string>
     <string>appscheme</string>
     </array>
     </dict>
