Xcode project is configured to support universal links; double tap on wallet icon shows snackbar with app id

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,10 +61,11 @@
     <key>CFBundleTypeRole</key>
     <string>Editor</string>
     <key>CFBundleURLName</key>
-    <string>givt.app</string>
+    <string>www.givt.app</string>
     <key>CFBundleURLSchemes</key>
     <array>
 	<string>https</string>
+	<string>http</string>
     <string>appscheme</string>
     </array>
     </dict>
