--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,11 +61,10 @@
     <key>CFBundleTypeRole</key>
     <string>Editor</string>
     <key>CFBundleURLName</key>
-    <string>www.givt.app</string>
+    <string>givt.app</string>
     <key>CFBundleURLSchemes</key>
     <array>
 	<string>https</string>
-	<string>http</string>
     <string>appscheme</string>
     </array>
     </dict>
