--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -48,6 +48,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          flutter-version: '3.13.6'
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v2.3.0
