--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,6 +8,13 @@ on:
         required: true
       MATCH_PASSWORD:
         required: true
+    inputs:
+      ruby-version:
+        required: true
+        type: string
+      flutter-version:
+        required: true
+        type: string
 
 jobs:
 
@@ -35,7 +42,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.118.0
         with: 
-          ruby-version: '3.0'
+          ruby-version: ${{ inputs.ruby-version }}
           bundler-cache: true
 
       - name: Auth codesigning
@@ -47,7 +54,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.13.7'
+          flutter-version: ${{ inputs.flutter-version }}
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v2.3.0
