--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,6 +10,13 @@ on:
         required: true
       CODESIGNING_DEPLOY_KEY:
         required: true
+    inputs:
+      ruby-version:
+        required: true
+        type: string
+      flutter-version:
+        required: true
+        type: string
 
 jobs:
   build-ios: 
@@ -36,7 +43,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.118.0
         with: 
-          ruby-version: '2.6.0'
+          ruby-version: ${{ inputs.ruby-version }}
           bundler-cache: true
 
       - name: Auth codesigning
@@ -48,7 +55,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.13.7'
+          flutter-version: ${{inputs.flutter-version }}
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v2.3.0
