update release drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,6 +15,7 @@ autolabeler:
   - label: 'enhancement'
     branch:
       - '/feature\/.+/'
+      - '/feat\/.+/'
   - label: 'bug'
     branch:
       - '/bug\/.+/'
@@ -22,3 +23,8 @@ autolabeler:
   - label: 'chore'
     branch:
       - '/chore\/.+/'
+      - '/dependabot\/.+/'
+include-labels:
+  - 'enhancement'
+  - 'bug'
+  - 'chore'
