Fetch tags logic added;  Select location screen added and adjusted; Select interests screen added and adjusted; Fetch recommended organisations logic added; Recomeended organisations scren added and adjusted; Organisations cubit destribution refactored

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   vibration: ^1.7.6
   visibility_detector: ^0.3.3
   nfc_manager: ^3.3.0
+  loading_animation_widget: ^1.2.0+4
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
