--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   nfc_manager: ^3.3.0
   loading_animation_widget: ^1.2.0+4
   bloc: ^8.1.2
+  flutter_guid: ^0.3.1
 
 dev_dependencies:
   flutter_test:
