--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,10 @@ flutter:
       fonts:
         - asset: assets/fonts/Roboto-Medium.ttf
           weight: 500
+    - family: RadioCanada
+      fonts:
+        - asset: assets/fonts/RadioCanada-Regular.ttf
+          weight: 400
 
 dependency_overrides:
   intl: ^0.18.0
