Fixed the merge gatekeeper

--- a/.github/workflows/mergegatekeeper.yaml
+++ b/.github/workflows/mergegatekeeper.yaml
@@ -13,9 +13,11 @@ jobs:
         steps:
           - name: spit out some values
             run: echo "${{ github.event.pull_request.head.ref }}, ${{ github.event.pull_request.title }}"
+
+jobs:
     merge_gatekeeper:
         runs-on: ubuntu-latest
-        if: ${{ github.event.pull_request.head.ref }} != 'develop' && contains(hotfix, ${{ github.event.pull_request.title }}) == false
+        if: ${{ github.event.pull_request.head.ref != 'develop' && !contains('hotfix', github.event.pull_request.title) }}
         steps:
         - uses: superbrothers/close-pull-request@v3
           with:
