--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   bloc: ^8.1.2
   flutter_guid: ^0.3.1
+  google_fonts: ^4.0.4
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
