--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   bloc: ^8.1.2
   flutter_guid: ^0.3.1
-  google_fonts: ^4.0.4
-  pinput: ^3.0.1
+  flutter_layout_grid: ^2.0.5
+  material_color_utilities: ^0.5.0
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,10 @@ flutter:
       fonts:
         - asset: assets/fonts/RadioCanada-Regular.ttf
           weight: 400
+    - family: Rouna
+      fonts:
+        - asset: assets/fonts/Rouna-Bold.otf
+          weight: 700
 
 dependency_overrides:
   intl: ^0.18.0
