--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   pinput: ^3.0.1
   google_fonts: ^4.0.4
+  device_info_plus: ^9.1.1
 
 dev_dependencies:
   flutter_test:
