--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,6 +8,8 @@ on:
         required: true
       GITHUB_API_TOKEN:
         required: true
+      LOGIT_API_KEY:
+        required: true
       CODESIGNING_DEPLOY_KEY:
         required: true
     inputs:
@@ -61,6 +63,7 @@ jobs:
         env: 
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORECONNECT_PRIVATE_KEY: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
+          LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
           PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
           FLAVOR: ${{ env.FLAVOR }}
