--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           CODESIGNING_DEPLOY_KEY: ${{ secrets.CODESIGNING_DEPLOY_KEY }}
           GOOGLE_PLAY_JSON_KEY: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
     
     ios:
          uses: ./.github/workflows/ios.yml
@@ -25,3 +26,4 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORECONNECT_PRIVATE_KEY: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
           GITHUB_API_TOKEN: ${{ secrets.PERSONAL_ACCESS_KEY }}
+          LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
