--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   pinput: ^3.0.1
   google_fonts: ^4.0.4
   device_info_plus: ^9.1.1
+  ios_utsname_ext: ^2.2.0
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
