--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org"
 
-gem "fastlane"
+gem "fastlane", '~> 2.217.0'
 gem "cocoapods"
 gem 'fastlane-plugin-flutter_version', '~> 1.0', '>= 1.1.14'
