--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.0+1
   get_it: ^7.6.4
   go_router: ^10.1.2
   http: ^0.13.5
