--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -55,10 +55,25 @@ jobs:
           channel: 'stable'
           flutter-version: ${{ inputs.flutter-version }}
 
-      - name: Run Fastlane
+      - name: Run Fastlane Testflight
+        if: github.ref == 'refs/heads/main'
         uses: maierj/fastlane-action@v2.3.0
         with:
-          lane: ios release
+          lane: ios testflight_release
+          subdirectory: ios
+        env: 
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          APPSTORECONNECT_PRIVATE_KEY: ${{ secrets.APPSTORECONNECT_PRIVATE_KEY }}
+          LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
+          PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
+          FLAVOR: ${{ env.FLAVOR }}
+
+      - name: Run Fastlane Production
+        if: github.ref == 'refs/heads/main'
+        uses: maierj/fastlane-action@v2.3.0
+        with:
+          lane: ios prod_release
           subdirectory: ios
         env: 
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
