--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -56,7 +56,7 @@ jobs:
           flutter-version: ${{ inputs.flutter-version }}
 
       - name: Run Fastlane Testflight
-        if: github.ref == 'refs/heads/main'
+        if: github.ref != 'refs/heads/main'
         uses: maierj/fastlane-action@v2.3.0
         with:
           lane: ios testflight_release
