--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -37,5 +37,6 @@ jobs:
         with:
           version: ${{ steps.yq.outputs.result }}
           commitish: main
+          publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
