--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.givtapp.kids">
 
-   <uses-permission android:name="android.permission.INTERNET"/>    
-   <uses-permission android:name="android.permission.VIBRATE"/>
-   <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.NFC" />
 
-   <application
+    <application
         android:label="${appName}"
         android:icon="@mipmap/launcher_icon"
         android:roundIcon="@mipmap/ic_launcher_round">
@@ -22,49 +22,37 @@
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"
+            />
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
+
             <meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
+
             <intent-filter android:autoVerify="true">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data
-                android:host="www.givt.app"
-                android:path="/search-for-coin"
-                android:scheme="https"/>
-   
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="www.givt.app"
+                    android:path="/search-for-coin" />
             </intent-filter>
 
-    <intent-filter android:label="testDeepLink" 
-                   android:autoVerify="true">
-        <action android:name="android.intent.action.VIEW"/>
+            <!-- <intent-filter android:label="testDeepLinkNFC"
+                android:autoVerify="true">
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="https"
+                    android:host="www.givt.app"
+                    android:pathPrefix="/search-for-coin" />
+            </intent-filter> -->
 
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE"/>
-
-        <data
-            android:scheme="https"
-            android:host="www.givt.app"
-            android:pathPrefix="/search-for-coin"/>
-
-    </intent-filter>
-    <intent-filter android:label="testDeepLinkNFC"
-                   android:autoVerify="true">
-        <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <data android:scheme="https"
-              android:host="www.givt.app"
-              android:pathPrefix="/search-for-coin" />
-    </intent-filter>
-
- 
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
