Update AndroidManifest.xml to support deep linking with path prefix

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,7 +41,19 @@
                 <data
                     android:scheme="https"
                     android:host="www.givt.app"
-                    android:path="/search-for-coin" />
+                    android:pathPrefix="/search-for-coin" />
+            </intent-filter>
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="givt.app"
+                    android:pathPrefix="/search-for-coin" />
             </intent-filter>
 
             <!-- <intent-filter android:label="testDeepLinkNFC"
