--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -33,7 +33,8 @@ jobs:
           cmd: yq -r '.version' 'pubspec.yaml'
   
       # Drafts next Release notes as Pull Requests are merged into "main"
-      - uses: release-drafter/release-drafter@v5
+      - uses: release-drafter/release-drafter@v6
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           version: ${{ steps.yq.outputs.result }}
           commitish: main
