--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,12 @@ dependencies:
   currency_text_input_formatter: ^2.1.8
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
-  flutter_bloc: ^8.1.3
-  flutter_svg: ^2.0.0+1
-  get_it: ^7.6.4
+  flutter_bloc: ^8.1.4
+  flutter_svg: ^2.0.10+1
+  get_it: ^7.6.7
   go_router: ^10.1.2
-  http: ^0.13.5
-  http_interceptor: ^1.0.2
+  http: ^1.2.1
+  http_interceptor: ^2.0.0-beta.8
   hydrated_bloc: ^9.1.1
   intl: ^0.18.0
   lottie: ^2.1.0
@@ -35,11 +35,11 @@ dependencies:
   visibility_detector: ^0.3.3
   nfc_manager: ^3.3.0
   loading_animation_widget: ^1.2.0+4
-  bloc: ^8.1.2
+  bloc: ^8.1.3
   flutter_guid: ^0.3.1
   flutter_layout_grid: ^2.0.5
-  material_color_utilities: ^0.5.0
-  font_awesome_flutter: ^10.6.0
+  material_color_utilities: ^0.8.0
+  font_awesome_flutter: ^10.7.0
   pinput: ^3.0.1
   google_fonts: ^4.0.4
   device_info_plus: ^9.1.1
