--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   logging: ^1.2.0
   path: ^1.8.3
   responsive_sizer: ^3.3.0+1
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +56,12 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"  
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
 flutter:
-  generate: true
+  # generate: true
   uses-material-design: true
   assets:
     - assets/images/
