--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ on:
         required: true
       LOGIT_API_KEY:
         required: true
+      GOOGLE_SERVICES_JSON_G4K:
+        required: true
     inputs:
       flutter-version:
         required: true
@@ -45,6 +47,11 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.CODESIGNING_DEPLOY_KEY }}
+        
+      - name: Replace google-services.json
+        if: github.ref == 'refs/heads/main'
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON_G4K }}" | base64 --decode > android/app/google-services.json
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
