--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,6 +12,8 @@ on:
         required: true
       CODESIGNING_DEPLOY_KEY:
         required: true
+      GOOGLE_SERVICES_PLIST_G4K:
+        required: true
     inputs:
       flutter-version:
         required: true
@@ -20,7 +22,7 @@ on:
 jobs:
   build-ios: 
     name: Build Flutter iOS
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: Set environment variables
         run: |
@@ -49,6 +51,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.CODESIGNING_DEPLOY_KEY }}
 
+      - name: Replace GoogleService-Info.plist
+        if: github.ref == 'refs/heads/main'
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_PLIST_G4K }}" | base64 --decode > ios/Runner/GoogleService-Info.plist
+  
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
