--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -33,7 +33,8 @@ jobs:
           cmd: yq -r '.version' 'pubspec.yaml'
   
       # Drafts next Release notes as Pull Requests are merged into "main"
-      - uses: release-drafter/release-drafter@v6
+      - name: Write Release Notes
+        uses: release-drafter/release-drafter@v6
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           version: ${{ steps.yq.outputs.result }}
@@ -41,3 +42,51 @@ jobs:
           publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Post slack message for new release
+
+      - name: Slack Notification
+        # if: ${{ github.ref == 'refs/heads/main' }}
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "TEST New release of the Givt app",
+                    "emoji": true
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Version:*\n${{ steps.yq.outputs.result }}"
+                    },
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View changelog",
+                        "emoji": true
+                      },
+                      "value": "changelog",
+                      "url": "https://github.com/givtnl/givt-app-kids/releases/tag/v${{ steps.yq.outputs.result }}"
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_RELEASENOTES_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      
