--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -56,7 +56,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "TEST New release of the Givt app",
+                    "text": "TEST New release of the G4K app :tada:",
                     "emoji": true
                   }
                 },
@@ -66,7 +66,7 @@ jobs:
                     {
                       "type": "mrkdwn",
                       "text": "*Version:*\n${{ steps.yq.outputs.result }}"
-                    },
+                    }
                   ]
                 },
                 {
