invalid json fix

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -68,14 +68,14 @@ jobs:
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Release Date:*\n$(date +'%Y-%m-%d')"
+                      "text": "*Release Date:*\n${{ github.event.head_commit.timestamp }}"
                     },
                     {
                       "type": "mrkdwn",
                       "text": "*Release Notes:*\nhttps://github.com/givtnl/givt-app-kids/releases/tag/v${{ steps.yq.outputs.result }}"
                     }
                   ]
-                },
+                }
               ]
             }
         env:
