Fix URL formatting in release-drafter.yml

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -86,7 +86,7 @@ jobs:
                         "emoji": true
                       },
                       "style": "primary",
-                      "url": "https://github.com/givtnl/givt-app-kids/releases/tag/v${{ steps.yq.outputs.result }}",
+                      "url": "https://github.com/givtnl/givt-app-kids/releases/tag/v${{ steps.yq.outputs.result }}"
                     }
                   ]
                 }
