--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -43,6 +43,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: "Set current date as env variable"
+        run: |
+          echo "builddate=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        id: version  # this is used on variable path
+  
       # Post slack message for new release
       - name: Slack Notification
         # if: ${{ github.ref == 'refs/heads/main' }}
@@ -68,7 +73,11 @@ jobs:
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Release Date:*\n$(date +'%Y-%m-%d')"
+                      "text": "*Release Date:*\n${{ steps.version.outputs.builddate }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Approved by:*\n${{ github.actor }}"
                     }
                   ]
                 },
