--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -94,6 +94,9 @@
     </array>
     </dict>
 </array>
-
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+    	<string>appscheme</string>
+	</array>	
 </dict>
 </plist>
