--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   logging: ^1.2.0
   path: ^1.8.3
   responsive_sizer: ^3.3.0+1
+  appcheck: ^1.0.6
 
 dev_dependencies:
   flutter_test:
