Show pop when NFC is not enabled

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path: ^1.8.3
   responsive_sizer: ^3.3.0+1
   uuid: ^3.0.7
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
