generalise action tile and implement location as tile

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -90,7 +90,7 @@
     <key>CFBundleURLSchemes</key>
     <array>
 	<string>https</string>
-    <string>appscheme</string>
+    <string>givtkids</string>
     </array>
     </dict>
 </array>
