--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   app_settings: ^5.1.1
   permission_handler: ^11.3.0
   url_launcher: ^6.2.5
+  flutter_layout_grid: ^2.0.5
 
 dev_dependencies:
   flutter_test:
