fix existing deeplink

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
     <intent-filter android:label="testDeepLinkNFC"
                    android:autoVerify="true">
         <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+        <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="https"
