--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -77,7 +77,8 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
           PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
-          FLAVOR: ${{ env.FLAVOR }}
+          FLAVOR: ${{ env.FLAVOR }}         
+          RUBYOPT: '-rostruct' # TODO: Remove when https://github.com/fastlane/fastlane/pull/21950 gets released
 
       - name: Run Fastlane - Production version
         if: ${{ github.ref == 'refs/heads/main' }}
@@ -91,3 +92,4 @@ jobs:
           LOGIT_API_KEY: ${{ secrets.LOGIT_API_KEY }}
           PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
           FLAVOR: ${{ env.FLAVOR }}
+          RUBYOPT: '-rostruct' # TODO: Remove when https://github.com/fastlane/fastlane/pull/21950 gets released
