--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
 
   flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
+  figma2flutter: ^0.3.0-alpha
 
 flutter:
   generate: true
